css/styles.css
body, html {
    font-family: 'Ubuntu', sans-serif;
    margin: 0;
    min-width: 320px;
    box-sizing: border-box;
    background: #EAE6E5;
}

body {
    display: grid;
    grid-template-columns: 0px 1fr 0px;
    grid-template-rows: 240px 270px 1fr 175px;
}

/* hero-image scaling */

@media only screen and (min-width: 412px) {
    body {
        grid-template-rows: 200px 340px 1fr 175px;
    }
}

@media only screen and (min-width: 500px) {
    body {
        grid-template-rows: 200px 420px 1fr 75px;
    }
}

/* 1024px wrapper */

@media only screen and (min-width: 1024px) {
    body {
        grid-template-columns: 1fr 1024px 1fr;
    }

    .header {
        padding: 1rem;
    }
}

*, *:before, *:after {
    box-sizing: inherit;
}

a {
    color: inherit;
    text-decoration: none;
}

/* header styling */

.header {
    grid-row: 1;
    grid-column: 2;
    display: grid;
    grid-template-rows: 2fr 1fr 1fr;
    grid-template-columns: 1fr 1fr;
    justify-items: center;
    color: #759EB8;
    padding-bottom: 1rem;
    font-size: 20px;
}

.logo {
    grid-area: 1 / 1 / 2 / 3;
    font-size: 2rem;
    font-family: 'Ubuntu', sans-serif;
    font-weight: 600;
    letter-spacing: 4px;
    background: #759EB8;
    color: #EAE6E5;
    border-radius: 5px;
    padding: .5rem;
    box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
    text-shadow: 1px 2px 10px rgba(0,0,0,0.2);
    margin: 2rem;
    text-align: center;
}

.header--github, .header--codepen, .header--projects, .header--resume {
    grid-area: 2 / 1 / 3 / 2;
    padding: .5rem;
    cursor: pointer;
}

.header--icon {
    margin-right: 1rem;
}

.header--codepen {
    grid-area: 2 / 2 / 3 / 3;
}

.header--projects {
    grid-area: 3 / 1 / 4 / 2;
}

.header--resume {
    grid-area: 3 / 2 / 4 / 3;
}

/* from multi to single row header */

@media only screen and (min-width: 775px) {
    body {
        grid-template-rows: 96px 420px 1fr 75px;
    }

    .header {
        grid-template-rows: 1fr;
        grid-template-columns: 5fr 1fr 1fr 1fr 1fr;
    }

    .logo, .header--github, .header--codepen, .header--projects, .header--resume {
        grid-row: 1;
    }
    
    .logo {
        grid-column: 1;
        margin: 0;
        align-self: center;
        justify-self: start;
    }
    
    .header--github {
        grid-column: 2;
    }
    
    .header--codepen {
        grid-column: 3;
    }
    
    .header--projects {
        grid-column: 4;
    }
    
    .header--resume {
        grid-column: 5;
    }
}

/* Hero styling */

.hero--background {
    grid-row: 2;
    grid-column: 1 / span 3;
    background-image: url("../images/computer_desk.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100%;
    min-width: 100vw;
}

.hero--content {
    grid-row: 2;
    grid-column: 2;
    display: grid;
    grid-template-rows: 1fr 4fr 4fr;
    grid-template-columns: 2fr 1.5fr;
}

.hero--content--class--declaration {
    grid-area: 2 / 1 / 3 / 2;
    align-self: end;
    color: #fff;
    margin: .5rem;
}

.hero--content--class--expression {
    grid-area: 3 / 1 / 4 / 3;
    align-self: start;
    color: #fff;
    margin: .5rem;
}

.declare {
    color: #cdb453;
}

.class {
    color: #68e8b5;
}

.constructor {
    color: #F4F1BB;
}

.variable {
    color: #96d7f7;
}

.text {
    color: #c37f44;
}

.hero--content--button {
    position: relative;
    outline: none;
    grid-area: 2 / 2 / 3 / 3;
    padding: 1rem;
    font-size: .75rem;
    justify-self: center;
    align-self: center;
    border: 2px solid #759EB8;
    color: #759EB8;
    background: none;
    border-radius: 4px;
    letter-spacing: 1px;
    font-weight: bold;
    display: grid;
    align-items: center;
    justify-items: center;
}

.hero--content--button:hover {
    color: #EAE6E5;
    text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
    background: #759EB8;
    cursor: pointer;
}

/* Email Address popup */

.eml {
    visibility: hidden;
    position: absolute;
    background: #759EB8;
    width: 20rem;
    top: -4.25rem;
    left: -12.25rem;
    font-size: 1rem;
    border-radius: 4px;
    display: flex;
    flex-direction: column;
    opacity: 0;
    transform: translateY(-3rem);
    transition: all .3s ease-in-out;
    text-align: center;
  }
  
  .eml::after {
    position: absolute;
    content: '';
    width: 1rem;
    height: 1rem;
    background: #759EB8;
    left: 15rem;
    bottom: -.5rem;
    transform: rotate(45deg);
  }
  
  .eml__text {
    padding: 1rem;
    z-index: 2;
  }
  
  .eml:hover {
    cursor: text;
  }

.hero--content--button:hover .eml{
    visibility: visible;
    opacity: 1;
    transform: translateY(0);
}

@media only screen and (min-width: 400px) {
    .hero--content {
        grid-template-columns: 1fr 12fr 12fr 1fr;
        margin: 0;
    }
    
    .hero--content--class--declaration {
        grid-area: 2 / 2 / 3 / 3;
    }
    
    .hero--content--class--expression {
        grid-area: 3 / 2 / 3 / 4;
    }
    
    .hero--content--button {
        grid-area: 2 / 3 / 3 / 4;
        font-size: 1rem;
    }
}

@media only screen and (min-width: 514px) {
    .hero--content {
        font-size: 1.25rem;
    }

    .eml {
        left: -8.5rem;
    }

    .eml::after {
        left: 12rem;
    }
}

@media only screen and (min-width: 605px) {
    .hero--content {
        grid-template-columns: 1fr 9fr 9fr 1fr;
        font-size: 1.5rem;
    }

    .eml {
        left: -6rem;
    }

    .eml::after {
        left: 9.5rem;
    }
    
}

@media only screen and (min-width: 650px) {
    .hero-content {
        grid-template-columns: 1fr 6fr 6fr 1fr;
    }
}

@media only screen and (min-width: 730px) {
    .hero-content {
        grid-template-columns: 1fr 3fr 3fr 1fr;
    }
}

main {
    grid-row: 3;
    grid-column: 2;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 610px;
}


.title {
    margin-left: 2rem;
    color: #759EB8;
}

.seperator {
    background: linear-gradient(to right, #5B9279, #5B927900, #5B927900, #5B927900);
    height: 2px;
    margin-left: 2rem;
}

.bio {
    grid-row: 1;
}

.about-me {
    max-width: 540px;
    font-family: 'Open Sans', sans-serif;
    margin-right: auto;
    margin-left: auto;
    padding: 1rem;
    color: #326483;
}


.body-txt {
    margin-bottom: 1rem;
}

/* Projects styling */

.featured--projects {
    grid-row: 2;
}

.projects {
    height: 550px;
    display: flex;
    flex-direction: column;
    padding: 2rem;
}

.project {
    background-size: cover;
    background-position: center;
    flex: 1 0;
    text-align: center;
    align-items: center;
    justify-content: center;
    display: flex;
    flex-direction: column;
    box-shadow: 
        5px 5px 15px rgba(0,0,0,0.3),
        inset 0 0 0 5px rgba(0,0,0,0.3);
    transform: scale(.9);
    transition: 
        flex .8s cubic-bezier(0.57, -0.37, 0.46, 1.42),
        transform 0.8s ease-in-out;
    cursor: pointer;
    overflow: hidden;
}

.project1 { background-image:url(../images/memory_game.jpg)}
.project2 { background-image:url(../images/arcade_game.jpg)}
.project3 { background-image:url(../images/neighborhood_map.jpg)}
.project4 { background-image:url(../images/tic_tac_toe.jpg)}
.project5 { background-image:url(../images/catch_of_the_day.jpg)}

.project > * {
    margin: 0;
    width: 100%;
    flex: 1 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1rem;
    background: rgba(255,255,255,0.7);
    color: #326483;
    border: 1px solid #111;
    border-style: solid none;
    transition: 
        transform .8s ease-in-out;
    text-shadow:
        0 0 2px rgba(255, 255, 255, 0.9), 
        0 0 8px rgba(255, 255, 255, 0.45);
}

.project--title {
    transform: translateY(-150%);
    flex: 5;
}


.project--title-small {
    transform: scaleY(1);
    transition: 
        transform .5s ease-in-out 1.1s;
}

.project--link {
    transform: translateY(150%);
    flex: 5;
    pointer-events: none;
}

.project--details--container {   
    transform: translateX(75%);
    margin: 0;
    width: auto;
    flex: 0;
    display: flex;
    flex-direction: row-reverse;
    justify-content: left;
    align-items: start;
    font-size: 1rem;
    background: none;
    color: #326483;
    border: none;
    border-style: none;
    transition: 
        transform 0.8s ease-out;
    text-shadow: none;
    overflow: hidden;
}
    
.project--details {
    font-size: .75rem;
    flex-basis: 33%;
    background: rgba(0,0,0,0.7);
    color: #759EB8;
    border: 1px solid rgba(255,255,255,0.7);
    border-style: none none none solid;
    display: flex;
    flex-direction: column;
}
    
.open {
    flex: 8;
    transform: scale(1);
}

.shrink {
    transform: scaleY(0);
    height: 0px;
    border: none;
    transition: 
        transform 0.8s ease-out;
}

.slide-in {
    transform: translateX(0);
    opacity: 1;
    transition: 
        transform 0.8s ease-out 1s;
}

.active {
    transform: translateY(0);
    pointer-events: all;
    transition: transform .5s ease-in-out .8s;
}

.project.open-active > .project--title-small {
    flex: 0 0 auto;
}

.project.open-active > .project--details--container {
    flex: 50;
}

/* .project.open-active > .project--title {
    transform: translateY(0);
}

.project.open-active > .project--link {
    transform: translateY(0);
    pointer-events: all;
} */

@media only screen and (min-width: 550px) {
    .projects {
        flex-direction: row;
    }
}

footer {
    grid-row: 4;
    grid-column: 1 / span 3;
    display: grid;
    grid-template-columns: 0px 1fr 0px;
}

.footer--bg {
    background: #326483;
    grid-column: 1 / span 3;
    grid-row: 1;
}

.footer--content {
    grid-column: 2;
    grid-row: 1;
    display: grid;
    grid-template-columns: 1fr 75px 1fr;
    grid-template-rows: 1.5fr .5fr 1fr;
    color: #EAE6E5;
    font-family: "Open Sans", sans-serif;
    font-size: .75rem;
    justify-items: center;
    align-items: center;
}

.footer--logo {
    grid-area: 1 / 2 / 2 / 3;
    margin: 0;
}

.footer-txt {
    grid-area: 2 / 1 / 3 / 4;
    margin: 0;
}

.footer--links {
    grid-area: 3 / 1 / 4 / 4;
    font-size: 2rem;
    color: #759EB8;
}

.footer--icon {
    margin: 0 1rem;
}

@media only screen and (min-width: 500px) {
    .footer--content {
        grid-template-columns: 1fr 6fr 3fr;
        grid-template-rows: 1fr;
    }

    .footer--logo {
        grid-row: 1;
        grid-column: 1;
        margin-left: .5rem;

    }

    .footer-txt {
        grid-row: 1;
        grid-column: 2;
    }

    .footer--links {
        grid-row: 1;
        grid-column: 3;
        justify-self: end;
    }
}

@media only screen and (min-width: 750px) {
    .footer--content {
        grid-template-columns: 1fr 12fr 3fr;
    }
}

@media only screen and (min-width: 1024px) {
    footer {
        grid-template-columns: 1fr 1024px 1fr;
    }
}

